manifests/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cloudcart
spec:
  mtls:
    mode: STRICT
