manifests/destinationrule_frontend.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: frontend
  namespace: cloudcart
spec:
  host: cloudcart-frontend

  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
