manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cloudcart
  namespace: cloudcart
spec:
  hosts:
  - "*"

  gateways:
  - cloudcart-gateway

  http:
  - match:
    - uri:
        prefix: /
    fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 50
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,unavailable,cancelled,5xx
    timeout: 10s
    route:
    - destination:
        host: cloudcart-frontend
        port:
          number: 80
