manifests/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: backend-policy
  namespace: cloudcart
spec:
  selector:
    matchLabels:
      app: cloudcart-backend

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/cloudcart/sa/default
